--- a/Styles/style.css
+++ b/Styles/style.css
@@ -218,6 +218,7 @@ div{
 
     main{
         margin:0%;
+        padding: 0%;
         display: flex;
         width:100%;
         flex-direction: column;
@@ -225,25 +226,23 @@ div{
     }
  
 
-    .logo__alura{
+   /* .logo__alura{
         content: url('/assets/Logo.png');
         margin:6.2538330% 0px 0px 5.2083333%;
         display:flex;
         width:4.025%;
         height:5.83209101%;
-    }
+    }*/
     div{
         
         padding:0px;
         margin:11.5951% 3.40715% 0% 5.2083333% ;
         display:flex;
         flex-direction: column;
-        gap:43.8672%;
         width: 89.5833333%;
         height:59.028960%;
     }
     .text__area{
-        height: 100%;
         margin:0%;
         padding:0%;
         background-color: #F3F5FC;
@@ -256,6 +255,10 @@ div{
         border:none;
         outline:none;
         display: flex;
+        box-sizing: border-box;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        max-height: auto;
     
     }
 
@@ -336,11 +339,11 @@ div{
 
     .area__ejecucion{
         border-radius: 2rem;
-        width: 89.5833333%;;
+        width: 89.5833333%;
         margin:3.40715% 3.40715% 3.40715% 5.20833%;
         background-color: white;
         width: 89.5833333%;
-        height: 11.3287%;
+        height: 13.043478%;
         align-content: center;
         display:flex;
         flex-direction: column;
@@ -362,13 +365,14 @@ div{
     .muñeco__texto{
         width:100%;
         height: 100%;
-        margin: 32px;
+        margin: 4.6511%;
         gap:0%;
 
     }
 
     .muñeco__texto__titulo{
         margin:0px;
+        width:100%;
         height: 100%;
         font-family: "Inter", sans-serif;
         font-weight: 700;
@@ -389,6 +393,43 @@ div{
         line-height: 24px;
 
     }
+
+    .nuevo-div{
+        margin:4.6647% 4.65116% 0% 4.65116%;
+        display:flex;
+        flex-direction:column;
+        height:52.478%;
+        width: 90.69767%;
+        font-family: "Inter", sans-serif;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 36px;
+        text-align: left;
+        color: #495057;
+        word-wrap: break-word;
+        overflow:scroll ;
+        
+       
+    }    
+    .nuevo-boton{
+        margin:2.6647% 4.65116% 4.6647% 4.65116%;
+        font-family: "Inter", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 19.36px;
+        text-align: center;
+        align-content: center;
+    
+        width: 90.6976%;
+        height:19.5335%;
+        border-radius: 1.5rem;
+        border: 1px 0px 0px 0px;
+        opacity: 0px;
+        border: 1px solid #0A3871;
+        background-color: #ffffff;
+    
+    }
+    
         
 
         
