--- a/Styles/style.css
+++ b/Styles/style.css
@@ -363,17 +363,15 @@ div{
     
 
     .muñeco__texto{
-        width:100%;
-        height: 100%;
+        margin:24,0601% 4.65116%  24.0601% 4.65116%  ;
+        width:90.6976%;
+        height: 51.8796%;
         margin: 4.6511%;
         gap:0%;
 
     }
 
     .muñeco__texto__titulo{
-        margin:0px;
-        width:100%;
-        height: 100%;
         font-family: "Inter", sans-serif;
         font-weight: 700;
         font-size: 1.5rem;
