--- a/Styles/style.css
+++ b/Styles/style.css
@@ -311,13 +311,13 @@ div{
     .boton__encriptar{
         width:48.235294%;
         height: auto;
-        border-radius: 24px;
+        border-radius: 1.5rem;
         background-color: #0A3871;
         color: #E9ECF8;
         font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 1rem;
-        line-height: 19.36px;
+        line-height: 1.21rem;
         align-items: center;
         border: none;
     
@@ -327,13 +327,13 @@ div{
         background-color:#D8DFE8;
         width:48.235294%;
         height:auto;
-        border-radius: 24px;
-        border: 1px solid #0A3871;
+        border-radius: 1.5rem;
+        border: 0.0625rem solid #0A3871;
         font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 1rem;
         color:#0A3871;
-        line-height: 19.36px;
+        line-height: 1.21rem;
         align-items: center;
     }
 
@@ -363,7 +363,7 @@ div{
     
 
     .muñeco__texto{
-        margin:24,0601% 4.65116%  24.0601% 4.65116%  ;
+        margin:24.0601% 4.65116%  24.0601% 4.65116%  ;
         width:90.6976%;
         height: 51.8796%;
         margin: 4.6511%;
@@ -389,6 +389,226 @@ div{
         text-align: center;
         color: #495057;
         line-height: 24px;
+
+    }
+
+    .nuevo-div{
+        margin:4.6647% 4.65116% 0% 4.65116%;
+        display:flex;
+        flex-direction:column;
+        height:52.478%;
+        width: 90.69767%;
+        font-family: "Inter", sans-serif;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 36px;
+        text-align: left;
+        color: #495057;
+        word-wrap: break-word;
+        overflow:scroll ;
+        
+       
+    }    
+    .nuevo-boton{
+        margin:2.6647% 4.65116% 4.6647% 4.65116%;
+        font-family: "Inter", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 19.36px;
+        text-align: center;
+        align-content: center;
+    
+        width: 90.6976%;
+        height:19.5335%;
+        border-radius: 1.5rem;
+        border: 1px 0px 0px 0px;
+        opacity: 0px;
+        border: 1px solid #0A3871;
+        background-color: #ffffff;
+    
+    }
+    
+        
+
+        
+}
+    
+
+
+
+@media (max-width: 375px)  {
+    
+
+    main{
+        margin:0%;
+        padding: 0%;
+        display: flex;
+        width:100%;
+        flex-direction: column;
+        height: 100vh; 
+    }
+ 
+
+   /* .logo__alura{
+        content: url('/assets/Logo.png');
+        margin:6.2538330% 0px 0px 5.2083333%;
+        display:flex;
+        width:4.025%;
+        height:5.83209101%;
+    }*/
+    div{
+        
+        padding:0px;
+        margin:11.5951% 3.40715% 6.859592% 5.2083333% ;
+        display:flex;
+        flex-direction: column;
+        width: 89.5833333%;
+        height:59.028960%;
+    }
+    .text__area{
+        margin:0%;
+        padding:0%;
+        background-color: #F3F5FC;
+        width:100%;
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 2rem;
+        height: 36.7346938%;
+        color: #0A3871;
+        border:none;
+        outline:none;
+        display: flex;
+        box-sizing: border-box;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        max-height: auto;
+    
+    }
+
+
+    .inferior{
+        margin:0%;
+        padding:0%;
+        width:100%;
+        height: 39.103%;
+        display:flex;
+        flex-direction: column;
+        gap:9.8958%;
+    }
+    .advertencia{
+        margin:0%;
+        width: 70%;
+        height: 9.375%;
+        opacity: 0px;
+        display:flex;
+        flex-direction: row;
+        gap:3.49344%;
+    }
+    .advertencia__imagen{
+        width:6.986%;
+        height: 16px;
+    }
+    .advertencia__texto{
+        margin:0px;
+        font-family: "Inter", sans-serif;
+        font-size: 0.75rem;
+        font-weight: 400;
+        line-height: 1.125rem;
+        text-align: left;
+        color: #495057;
+    
+    
+    
+    }
+    
+    .botones{
+        width: 100%;
+        height: 82.2916%;
+        display:flex;
+        gap: 15.189873%;
+        flex-direction: column;
+    }
+    
+    .boton__encriptar{
+        width:100%;
+        height: 42.4050%;
+        border-radius: 1.5rem;
+        background-color: #0A3871;
+        color: #E9ECF8;
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: 19.36px;
+        align-items: center;
+        border: none;
+    
+    }
+    
+    .boton__desencriptar{
+        background-color:#D8DFE8;
+        width:100%;
+        height:42.4050%;
+        border-radius: 1.5rem;
+        border: 1px solid #0A3871;
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
+        color:#0A3871;
+        line-height: 19.36px;
+        align-items: center;
+    }
+
+    .area__ejecucion{
+        border-radius: 2rem;
+        margin:7,7170% 3.40715% 3.40715% 5.20833%;
+        background-color: white;
+        width: 89.5833333%;
+        height: 19.935691%;
+        align-content: center;
+        display:flex;
+        flex-direction: column;
+
+    }
+
+    .muñeco__imagen{
+        margin:0px;
+        padding:0px;
+        display: none;
+        height:0px;
+        width:0px;
+    }
+    .muñeco{
+        width: 100%;
+        height: 100%;
+    }
+    
+
+    .muñeco__texto{
+        margin:4.2043% 9.78593%  11.2043% 9.78593%;
+        width:80.4281%;
+        height: 60.7885%;
+        gap:5.505344%;
+
+    }
+
+    .muñeco__texto__titulo{
+        font-family: "Inter", sans-serif;
+        font-weight: 700;
+        font-size: 1.5rem;
+        text-align: center;
+        color: #343A40;
+        line-height: 28.8px;
+
+    }
+    .muñeco__texto__parrafo{
+        height: 100%;
+        margin:0px;
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
+        text-align: center;
+        color: #495057;
+        line-height: 1.5rem;
 
     }
 
